--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2024"
 [dependencies]
 nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
 urlencoding = "2.1.3"
+
+[profile.release]
+# magic incantations to produce speedier release builds
+strip = "symbols"
+lto = true
+codegen-units = 1
