--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "common_crawl"
+name = "most-urls"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
+polars = "0.48.1"
 # urlencoding = "2.1.3"
 
 [profile.release]
