--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
-polars = { version = "0.48.1", features = ["new_streaming"] }
+polars = { version = "0.48.1", features = ["lazy"] }
 # urlencoding = "2.1.3"
 
 [profile.release]
