--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+idna = "1.0.3"
 nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
 polars = { version = "0.48.1", features = ["lazy"] }
-# urlencoding = "2.1.3"
+url = "2.5.4"
+urlencoding = "2.1.3"
 
 [profile.release]
 # magic incantations to produce speedier release builds
