--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2024"
 [dependencies]
 idna = "1.0.3"
 nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
+percent-encoding = "2.3.1"
 polars = { version = "0.48.1", features = ["lazy"] }
 url = "2.5.4"
-urlencoding = "2.1.3"
 
 [profile.release]
 # magic incantations to produce speedier release builds
