--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ idna = "1.0.3"
 nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
 percent-encoding = "2.3.1"
 polars = { version = "0.49.1", features = ["lazy", "polars-io"] }
+reqwest = { version = "0.12.22", features = ["blocking"] }
 url = "2.5.4"
 
 [profile.release]
