--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,13 @@ idna = "1.0.3"
 nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
 percent-encoding = "2.3.1"
 polars = { version = "0.49.1", features = ["lazy", "polars-io"] }
-reqwest = { version = "0.12.22", features = ["blocking"] }
+reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
 url = "2.5.4"
+
+# for gzip streaming
+async-compression = { version = "0.3.12", features = ["futures-io", "gzip"] }
+futures = "0.3.31"
+tokio = "1.46.1"
 
 [profile.release]
 # magic incantations to produce speedier release builds
